<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/categories_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <!--  <ImageView
          android:id="@+id/register_image"
          android:layout_width="match_parent"
          android:layout_height="160dp"
          android:layout_marginLeft="25dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="25dp"
          android:contentDescription="image"
          android:src="@drawable/register" />-->

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins600"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/register_page_title"
        android:textColor="@color/white"
        android:textSize="22sp" />
    <TextView
        android:id="@+id/register_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_title"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/rubik"
        android:gravity="center"
        android:text="@string/register_page_subtitle"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/linear_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_subtitle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="90dp"
            app:civ_circle_background_color="@color/grey"
            android:layout_gravity="center"
            android:padding="2dp"
            android:src="@drawable/person_24"
            app:civ_border_color="@color/white"
            app:civ_border_overlay="true"
            app:civ_border_width="2dp" />


        <EditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:digits="qwertyuiopasdfghjklzxcvbnm QWERTYUIOPASDFGHJKLZXCVBNM"
            android:fontFamily="@font/rubik"
            android:hint="Enter Your Name"
            android:inputType="textPersonName"
            android:nextFocusDown="@+id/email"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="#70ffffff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/rubik"
            android:hint="Enter Your Email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/reg_password"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:textColorHint="#70ffffff"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Enter your Password"
            android:inputType="textPassword"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:textColorHint="#77ffffff"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/reg_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="Enter your Mobile Number"
            android:inputType="phone"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:textColorHint="#77ffffff"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/already_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:alpha="0.7"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/rubik"
            android:gravity="end"
            android:text="@string/register_olg_member"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <Button
            android:id="@+id/reg_submit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/round_corner_button"
            android:fontFamily="@font/poppinsregular"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/register_button"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/api_name_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_register"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/red"
        android:visibility="gone" />

    <TextView
        android:id="@+id/api_email_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/api_name_error"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="5dp"
        android:textColor="@color/red"
        android:visibility="gone" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/api_email_error"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white" />

    <TextView
        android:id="@+id/social_register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/register_continue_with"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold" />
</RelativeLayout>